--- a/async/ajax.html
+++ b/async/ajax.html
@@ -25,8 +25,8 @@
     </script>
   </head>
   <body>
-    <div id="demo">
+    <div id="demo"></div>
         <input type="button" value="실행" onclick="loadDoc()">
-    </div>
+    
   </body>
 </html>
