--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -18,7 +18,13 @@
             </div>
         </nav>
     </header>
-    <h1>Welcome to Web Shopping Mall</h1>
+    <div class="p-4 bg-primary text-white">
+        <div class="container">
+            <h1 class="display-3">
+                Welcome to Web Shopping Mall
+            </h1>
+        </div>
+    </div>
     <h3>Welcome to Web Market</h3>
 </body>
 </html>
