--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -25,6 +25,11 @@
             </h1>
         </div>
     </div>
-    <h3>Welcome to Web Market</h3>
+    <div class="container">
+        <div class="text-center">
+            <h3>Welcome to Web Market</h3>
+
+        </div>
+    </div>
 </body>
 </html>
