--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="">Home</a>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="">Home</a>
+          </div>
+        </div>
+      </nav>
     </header>
     <div class="p-4 bg-primary text-white">
-        <div class="container">
-            <h1 class="display-3">
-                Welcome to Web Shopping Mall
-            </h1>
-        </div>
+      <div class="container">
+        <h1 class="display-3">Welcome to Web Shopping Mall</h1>
+      </div>
     </div>
     <div class="container">
-        <div class="text-center">
-            <h3>Welcome to Web Market</h3>
-
-        </div>
+      <div class="text-center">
+        <h3>Welcome to Web Market</h3>
+      </div>
     </div>
-    <footer class="container">
-        &copy;생존코딩
-    </footer>
-</body>
+
+    <hr>
+
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">슈퍼마리오</div>
+        <div class="col text-center">스즈메의 문단속</div>
+        <div class="col text-center">슈퍼맨</div>
+      </div>
+    </div>
+
+    <hr />
+
+    <footer class="container">&copy;생존코딩</footer>
+  </body>
 </html>
