vue 버전 무비무비

--- a/vuejs/movie.html
+++ b/vuejs/movie.html
@@ -20,7 +20,7 @@
     <div id="app">
         <input type="text" placeholder="제목" v-model="query">
         <div>
-            총 {{ movies.length }} 개의 영화 검색
+            총 {{filteredMovies.length }} 개의 영화 검색
 
         </div>
         <ul>
