--- a/vuejs/computed.html
+++ b/vuejs/computed.html
@@ -15,7 +15,8 @@
       <input type="text" v-model="message" />
       
       <!-- 컴퓨티드가 관찰할 떄 쓰는 거 -->
-      <div>{{upperCaseMessage}}</div>           
+      <div>{{upperCaseMessage}}</div>    
+      <input v-on:click="reversedMessage" type="button" value="뒤집기">       
       
     </div>
     <script>
@@ -30,6 +31,15 @@
             return this.message.toUpperCase();
           },
         },
+        created: function() {
+            console.log("생성자");
+        },
+
+        methods:{
+            reversedMessage: function(){
+                this.message = this.message.split('').reverse().join('')
+            }
+        }
       });
     </script>
   </body>
